--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@
 #next {
   width: 50%;
   height: 100%;
+  cursor: pointer;
 }
 
 .viewer {
@@ -42,4 +43,175 @@
     width: auto;
     height: 100%;
   }
+}
+
+.nav-back {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: black;
+
+  visibility: hidden;
+  opacity: 0;
+
+  transition: all 0.5s;
+}
+
+.nav-back.on {
+  visibility: visible;
+  opacity: 0.7;
+}
+
+.nav {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 15em;
+  padding: 2em 1em;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  background-color: white;
+  border: 2px solid;
+
+  /* color: white; */
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 14px;
+  line-height: 1;
+  text-align: center;
+
+  visibility: hidden;
+  opacity: 0;
+
+  transition: all 0.5s;
+}
+
+.nav.on {
+  visibility: visible;
+  opacity: 1;
+}
+
+@media (min-aspect-ratio: 1920/2559) {
+  .nav {
+    font-size: 16px;
+  }
+}
+
+.nav ul {
+  list-style: none;
+  padding-left: 0px;
+  margin: 0;
+}
+
+.nav a {
+  color: black;
+}
+.nav a:visited {
+  color: black;
+}
+
+.nav a img {
+  height: 1em;
+}
+
+.nav ul.menu {
+  margin-bottom: 1em;
+}
+
+.nav .f-list {
+  font-weight: bold;
+  font-size: 1.25em;
+  border-bottom: 1px solid;
+}
+
+.nav .f-list.links {
+  font-weight: normal;
+}
+
+.nav .f-list:first-child {
+  border-top: 1px solid;
+}
+
+.nav .s-list span {
+  font-weight: normal;
+  font-size: 0.9em;
+}
+
+.nav span {
+  display: inline-block;
+  padding: 0.5em 2em;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.nav span:hover {
+  transform: scale(1.1);
+}
+
+.nav .search {
+  /* width: 3em;
+  margin-bottom: 1em; */
+}
+
+.nav .search input {
+  width: 1.7em;
+  margin-right: 0.3em;
+  border: none;
+  border-bottom: 1px solid;
+  text-align: right;
+  position: relative;
+  bottom: -0.15em;
+}
+
+.nav .search input:focus-visible {
+  outline: none;
+}
+
+/* Chrome, Safari, Edge, Opera */
+.nav .search input::-webkit-outer-spin-button,
+.nav .search input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.nav .search input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+.nav #search-btn {
+  position: relative;
+  bottom: -0.15em;
+  padding: 1em 0.5em 0.1em 0.5em;
+  font-weight: bold;
+  border-bottom: 1px solid;
+}
+
+.nav-btn {
+  position: fixed;
+  right: 1em;
+  bottom: 1em;
+  filter: invert(1);
+  opacity: 0.5;
+  height: 3em;
+  width: 3em;
+  cursor: pointer;
+}
+
+@media (min-aspect-ratio: 1920/2559) {
+  .nav-btn {
+    right: 2em;
+    bottom: 2em;
+    height: 4em;
+    width: 4em;
+  }
+}
+
+.hidden {
+  display: none !important;
 }
