--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ html {
   visibility: hidden;
   opacity: 0;
 
-  transition: all 0.5s;
+  transition: visibility 0.5s, opacity 0.5s;
 }
 
 .nav-back.on {
@@ -91,7 +91,7 @@ html {
   visibility: hidden;
   opacity: 0;
 
-  transition: all 0.5s;
+  transition: visibility 0.5s, opacity 0.5s;
 }
 
 .nav.on {
