--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,8 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  user-select: none;
 }
 
 .viewer img {
@@ -237,6 +239,7 @@ html {
   height: 3em;
   width: 3em;
   cursor: pointer;
+  user-select: none;
 }
 
 @media (min-aspect-ratio: 1920/2559) {
