--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,17 @@ html {
   line-height: 1;
   text-align: center;
   overflow: hidden;
+  background-color: black;
 }
 .wrapper {
   background-color: black;
   overflow: hidden;
   position: relative;
   width: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .control {
@@ -24,6 +29,7 @@ html {
   display: flex;
   align-items: stretch;
   justify-content: space-between;
+  z-index: 3;
 }
 
 #prev,
@@ -56,11 +62,12 @@ html {
 }
 
 .viewer {
-  width: 100%;
-  height: 100%;
+  width: auto;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 
   user-select: none;
 }
@@ -71,6 +78,10 @@ html {
 }
 
 @media (min-aspect-ratio: 1920/2559) {
+  .viewer {
+    height: 100%;
+  }
+
   .viewer img {
     width: auto;
     height: 100%;
@@ -78,6 +89,24 @@ html {
   .arrow {
     display: block;
   }
+}
+
+.ex-link {
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.1);
+  z-index: 5;
+  border-radius: 5%;
+  cursor: pointer;
+  box-shadow: 5px 5px 10px rgb(50 50 50 / 70%);
+
+  width: 21%;
+  height: 16%;
+  left: 4%;
+  bottom: 21.3%;
+}
+
+.ex-link.hidden {
+  display: none;
 }
 
 .nav-back {
@@ -91,6 +120,7 @@ html {
   visibility: hidden;
   opacity: 0;
   transition: visibility 0.3s, opacity 0.3s;
+  z-index: 7;
 }
 
 .nav-back.on {
@@ -116,6 +146,7 @@ html {
   transition: visibility 0.3s, opacity 0.3s;
   visibility: hidden;
   opacity: 0;
+  z-index: 7;
 }
 
 .nav.on {
@@ -196,6 +227,7 @@ html {
   opacity: 0;
   user-select: none;
   padding: 0.5em;
+  z-index: 7;
 }
 .search.on {
   visibility: visible;
@@ -247,6 +279,7 @@ html {
   user-select: none;
 
   transition: transform 0.3s;
+  z-index: 7;
 }
 
 .nav-btn:hover {
